# HCR_PROJECT

./: .env  .gitignore  Dockerfile  DockerfileNoetic  HOPE State Machine Test 1.py  Makefile  README.md  StateMachine.py  jetson.txt  patient_server.py  person_tracking.py
Static/: 5_body_temperature.html  6_display_body_temperature.html  7_measure_heart_rate_and_spo2_instructions.html  ask_preset_questions.html  blood_pressure.html  display_rfid_temperature.html  ecg.html  heart_rate_spo2.html  request_permission_for_sensor_data.html  rfid_temperature.html  start.html  thankyou.html  webform.html
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/.private/naoqi_driver/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/pepper_bringup/: .catkin  local_setup.sh
catkin_ws/devel/.private/pepper_control/: .catkin
catkin_ws/devel/.private/pepper_dcm_bringup/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/pepper_description/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/.private/pepper_gazebo_plugin/: .catkin  .rosinstall
catkin_ws/devel/.private/pepper_meshes/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/pepper_moveit_config/: .catkin  _setup_util.py  setup.sh
catkin_ws/devel/tmp/: installer.run
catkin_ws/src/sst/: CMakeLists.txt  package.xml
catkin_ws/src/sst/scripts/: sst_node.py
jetson/: DispenserControl.ino
jetson/hope/: Makefile  cert.pem  frames.gv  key.pem
scripts/: amcl_hope.launch
(+118 files in other folders)
