<?xml version="1.0"?>
<package format="2">
  <name>sst</name>
  <version>0.0.0</version>
  <description>The sst package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>audio_common_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- System Dependencies for Whisper -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchaudio</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>portaudio19-dev</exec_depend>

  <export>
  </export>
</package>
